--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
-    "ownerNumber": ["6285342106390@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
+    "ownerNumber": ["6285806240904@s.whatsapp.net","6285755146419@s.whatsapp.net"],
+    "ownerName": "Rama aJa",
     "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "botName": "MaaBotz",
+    "footer": "api.Ramaa",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
     "autobio": true,
-    "gamewaktu": 90,
+    "gamewaktu": 120,
     "limitCount": 25,
     "gcount": {
         "prem": 1000,
