--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["6285342106390@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["6285806240904@s.whatsapp.net","6285755146419@s.whatsapp.net"],
+    "ownerName": "Rama (owner)",
+    "instagram" : "https://chat.whatsapp.com/FxhPGFS8ZhL9E4nhk1X7Rg",
+    "botName": "MaaBotz - Mdོ",
+    "footer": "api.Rama",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
