--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "ownerNumber": ["6285806240904@s.whatsapp.net","6285755146419@s.whatsapp.net"],
-    "ownerName": "Rama aJa",
+    "ownerName": "•𝙍𝙖𝙢𝙖𝙖` 𝙆𝙚𝙩𝙘𝙚𝙝",
     "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "MaaBotz",
-    "footer": "api.Ramaa",
+    "botName": "Loly'Botz",
+    "footer": "Rama - Loly'Botz",
     "sessionName": "session",
     "pathimg": "./media/Haruka.jpg",
     "BotKey": "V12",
